new category page with "Pets" name added

--- a/views/store.html
+++ b/views/store.html
@@ -45,9 +45,13 @@
             <div class="category" onclick="filterProducts('kits')">
                 <span>🧰 kits</span>
             </div>
+            <div class="category" onclick="filterProducts('Pets')">
+                <span>🐾 Pets</span>
+            </div>
             <div class="category" onclick="filterProducts('misc')">  
                 <span>🎲 other</span>  
             </div>  
+            
             
             
         </section> 
@@ -74,6 +78,7 @@
             <div class="products" id="products">  
                 <!-- سلاح‌ها -->  
                 <div class="product" data-category="weapons" title="Sharpness I">  
+                    <p class="mark">LEVEL.1</p>  
                     <img src="/public/images/enchanted-diamond-sword.jpg" alt="Enchanted Lv.1 Diamond Sword">  
                     <h3>Diamond Sword</h3>  
                     <p>Enchanted Lv.1 Sword</p>  
@@ -81,6 +86,7 @@
                     <button class="buy-button" onclick="addToCart('Enchanted Lv.1 Diamond Sword', 1000)">خرید</button>  
                 </div>  
                 <div class="product" data-category="weapons" title="Sharpness I">  
+                    <p class="mark">LEVEL.1</p>  
                     <img src="/public/images/enchanted-netherite-sword.jpg" alt="Enchanted Lv.1 Netherite Sword">  
                     <h3>Netherite Sword</h3>  
                     <p>Enchanted Lv.1 Sword</p>  
@@ -88,6 +94,7 @@
                     <button class="buy-button" onclick="addToCart('Enchanted Lv.1 Netherite Sword', 5000)">خرید</button>  
                 </div>  
                 <div class="product" data-category="weapons" title="Sharpness I">  
+                    <p class="mark">LEVEL.1</p>  
                     <img src="/public/images/enchanted-iron-sword.jpg" alt="Enchanted Lv.1 Iron Sword">  
                     <h3>Iron Sword</h3>  
                     <p>Enchanted Lv.1 Sword</p>  
@@ -95,6 +102,7 @@
                     <button class="buy-button" onclick="addToCart('Enchanted Lv.1 Iron Sword', 200)">خرید</button>  
                 </div>  
                 <div class="product" data-category="weapons" title="Sharpness I">  
+                    <p class="mark">LEVEL.1</p>  
                     <img src="/public/images/enchanted-golden-sword.jpg" alt="Enchanted Lv.1 Golden Sword">  
                     <h3>Golden Sword</h3>  
                     <p>Enchanted Lv.1 Sword</p>  
@@ -102,6 +110,7 @@
                     <button class="buy-button" onclick="addToCart('Enchanted Lv.1 Golden Sword', 250)">خرید</button>  
                 </div>  
                 <div class="product" data-category="weapons" title="power I">  
+                    <p class="mark">LEVEL.1</p>  
                     <img src="/public/images/enchanted-bow.jpg" alt="Enchanted Lv.1 Bow">  
                     <h3>Bow</h3>  
                     <p>Enchanted Lv.1 Bow</p>  
@@ -109,6 +118,7 @@
                     <button class="buy-button" onclick="addToCart('Enchanted Lv.1 Bow', 800)">خرید</button>  
                 </div>  
                 <div class="product" data-category="weapons" title="unbreaking I">  
+                    <p class="mark">LEVEL.1</p>  
                     <img src="/public/images/enchanted-shield.jpg" alt="Enchanted Lv.1 Shield">  
                     <h3>Shield</h3>  
                     <p>Enchanted Lv.1 Shield</p>  
@@ -116,6 +126,7 @@
                     <button class="buy-button" onclick="addToCart('Enchanted Lv.1 Shield', 1100)">خرید</button>  
                 </div> 
                 <div class="product" data-category="weapons" title="">  
+                    <p class="mark">LEVEL.1</p>  
                     <img src="/public/images/enchanted-trident.jpg" alt="Enchanted Lv.1 Trident">  
                     <h3>Trident</h3>  
                     <p>Enchanted Lv.1 Trident</p>  
@@ -123,6 +134,7 @@
                     <button class="buy-button" onclick="addToCart('Enchanted Lv.1 Trident', 15000)">خرید</button>  
                 </div> 
                 <div class="product" data-category="weapons" title="Sharpness I">  
+                    <p class="mark">LEVEL.1</p>  
                     <img src="/public/images/enchanted-hammer.jpg" alt="Enchanted Lv.1 Hammer">  
                     <h3>Hammer</h3>  
                     <p>Enchanted Lv.1 Hammer</p>  
@@ -132,6 +144,7 @@
 
                 <!-- زره‌ها -->  
                 <div class="product" data-category="armor" title="protection |">  
+                    <p class="mark">LEVEL.1</p>  
                     <img src="/public/images/enchanted-diamond-armor.jpg" alt="Enchanted Lv.1 Diamond Armor">  
                     <h3>Diamond Armor</h3>  
                     <p>Enchanted Lv.1 Armor</p>  
@@ -139,6 +152,7 @@
                     <button class="buy-button" onclick="addToCart('Enchanted Lv.1 Diamond Armor', 3000)">خرید</button>  
                 </div>  
                 <div class="product" data-category="armor" title="protection |">  
+                    <p class="mark">LEVEL.1</p>  
                     <img src="/public/images/enchanted-golden-armor.jpg" alt="Enchanted Lv.1 Golden Armor">  
                     <h3>Golden Armor</h3>  
                     <p>Enchanted Lv.1 Armor</p>  
@@ -146,6 +160,7 @@
                     <button class="buy-button" onclick="addToCart('Enchanted Lv.1 Golden Armor', 1350)">خرید</button>  
                 </div>  
                 <div class="product" data-category="armor" title="protection |">  
+                    <p class="mark">LEVEL.1</p>  
                     <img src="/public/images/enchanted-netherite-armor.jpg" alt="Enchanted Lv.1 Netherite Armor">  
                     <h3>Netherite Armor</h3>  
                     <p>Enchanted Lv.1 Armor</p>  
@@ -153,6 +168,7 @@
                     <button class="buy-button" onclick="addToCart('Enchanted Lv.1 Netherite Armor', 8250)">خرید</button>  
                 </div>  
                 <div class="product" data-category="armor" title="protection |">  
+                    <p class="mark">LEVEL.1</p>  
                     <img src="/public/images/enchanted-iron-armor.jpg" alt="Enchanted Lv.1 Iron Armor">  
                     <h3>Iron Armor</h3>  
                     <p>Enchanted Lv.1 Armor</p>  
@@ -200,6 +216,7 @@
 
                 <!-- محصولات جمع آوری -->
                 <div class="product" data-category="mine" title="Eficiency I">  
+                    <p class="mark">LEVEL.1</p>  
                     <img src="/public/images/enchanted-diamond-pickaxe.jpg" alt="Enchanted Lv.1 Diamond Pickaxe">  
                     <h3>Diamond Pickaxe</h3>  
                     <p>Enchanted Lv.1 Pickaxe</p>  
@@ -207,6 +224,7 @@
                     <button class="buy-button" onclick="addToCart('Enchanted Lv.1 Diamond Pickaxe' , 2000)">خرید</button>  
                 </div>  
                 <div class="product" data-category="mine" title="Eficiency I">  
+                    <p class="mark">LEVEL.1</p>  
                     <img src="/public/images/enchanted-netherite-pickaxe.jpg" alt="Enchanted Lv.1 Netherite Pickaxe">  
                     <h3>Netherite Pickaxe</h3>  
                     <p>Enchanted Lv.1 Pickaxe</p>  
@@ -214,6 +232,7 @@
                     <button class="buy-button" onclick="addToCart('Enchanted Lv.1 Netherite Pickaxe' , 6500)">خرید</button>  
                 </div>  
                 <div class="product" data-category="mine" title="Eficiency I">  
+                    <p class="mark">LEVEL.1</p>  
                     <img src="/public/images/enchanted-iron-pickaxe.jpg" alt="Enchanted Lv.1 Iron Pickaxe">  
                     <h3>Iron Pickaxe</h3>  
                     <p>Enchanted Lv.1 Pickaxe</p>  
@@ -221,6 +240,7 @@
                     <button class="buy-button" onclick="addToCart('Enchanted Lv.1 Iron Pickaxe' , 150)">خرید</button>  
                 </div>
                 <div class="product" data-category="mine" title="Eficiency I">  
+                    <p class="mark">LEVEL.1</p>  
                     <img src="/public/images/enchanted-golden-pickaxe.jpg" alt="Enchanted Lv.1 Golden Pickaxe">  
                     <h3>Golden Pickaxe</h3>  
                     <p>Enchanted Lv.1 Pickaxe</p>  
@@ -228,6 +248,7 @@
                     <button class="buy-button" onclick="addToCart('Enchanted Lv.1 Golden Pickaxe' , 250)">خرید</button>  
                 </div>
                 <div class="product" data-category="mine" title="Eficiency I">  
+                    <p class="mark">LEVEL.1</p>  
                     <img src="/public/images/enchanted-diamond-axe.jpg" alt="Enchanted Lv.1 Diamond Axe">  
                     <h3>Diamond Axe</h3>  
                     <p>Enchanted Lv.1 Axe</p>  
@@ -235,13 +256,15 @@
                     <button class="buy-button" onclick="addToCart('Enchanted Lv.1 Diamond Axe' , 2000)">خرید</button>  
                 </div>
                 <div class="product" data-category="mine" title="Eficiency I">  
+                    <p class="mark">LEVEL.1</p>  
                     <img src="/public/images/enchanted-netherite-axe.jpg" alt="Enchanted Lv.1 Netherite Axe">  
                     <h3>Netherite Pickaxe</h3>  
                     <p>Enchanted Lv.1 Axe</p>  
                     <span class="price">6,500 CYT</span>  
                     <button class="buy-button" onclick="addToCart('Enchanted Lv.1 Netherite Axe' , 6500)">خرید</button>  
                 </div>
-                <div class="product" data-category="mine" title="Eficiency I">  
+                <div class="product" data-category="mine" title="Eficiency I"> 
+                    <p class="mark">LEVEL.1</p> 
                     <img src="/public/images/enchanted-iron-axe.jpg" alt="Enchanted Lv.1 Iron Axe">  
                     <h3>Iron Axe</h3>  
                     <p>Enchanted Lv.1 Axe</p>  
@@ -249,7 +272,8 @@
                     <button class="buy-button" onclick="addToCart('Enchanted Lv.1 Iron Axe' , 150)">خرید</button>  
                 </div>
                 <div class="product" data-category="mine" title="Eficiency I">  
-                    <img src="/public/images/enchanted-golden-axe.jpg" alt="Enchanted Lv.1 Golden Axe">  
+                    <p class="mark">LEVEL.1</p>  
+                    <img src="/public/images/enchanted-golden-axe.jpg" alt="Enchanted Lv.1 Golden Axe"> 
                     <h3>Golden Axe</h3>  
                     <p>Enchanted Lv.1 Axe</p>  
                     <span class="price">250 CYT</span>  
@@ -259,12 +283,73 @@
 
                 <!-- کیت ها -->
                     <div class="product" data-category="kits" title="Sharpness I">  
+                        <p class="mark"> LEVEL.1 </p>
                         <img src="/public/images/Netherite-Kit.jpg" alt="Netherite Kit Level.1">
                         <h3>Netherite Kit</h3>
                         <p>Level.1</p>
                         <span class="price">50,000 CYT</span>
                         <button class="buy-button" onclick="addToCart('Netherite Kit Level.1', 50000)">خرید</button>  
                     </div>  
+
+
+
+                <!-- پت ها -->
+                <div class="product" data-category="Pets">  
+                    <p class="mark">Baby Wolf</p>
+                    <img src="/public/images/Citywar-Baby-Wolf-Pet.jpg" alt="Citywar Baby Wolf Pet">  
+                    <h3>Baby Wolf</h3>
+                    <p>Baby Wolf Pet</p>  
+                    <span class="price">500 CYT</span>  
+                    <button class="buy-button" onclick="addToCart('Baby Wolf Pet' , 500)">خرید</button>  
+                </div> 
+                <div class="product" data-category="Pets">
+                    <p class="mark">Wolf</p>
+                    <img src="/public/images/Citywar-Wolf-Pet.jpg" alt="Citywar Wolf Pet">
+                    <h3>Wolf</h3>
+                    <p>Wolf Pet</p>
+                    <span class="price">700 CYT</span>
+                    <button class="buy-button" onclick="addToCart('Wolf Pet' , 700)">خرید</button>
+                </div>
+                <div class="product" data-category="Pets">
+                    <p class="mark">Cat</p>
+                    <img src="/public/images/Citywar-Cat-Pet.jpg" alt="Citywar Cat Pet">
+                    <h3>Cat</h3>
+                    <p>Cat Pet</p>
+                    <span class="price">600 CYT</span>
+                        <button class="buy-button" onclick="addToCart('Cat Pet' , 600)">خرید</button>
+                    </div>
+                <div class="product">
+                    <p class="mark"></p>
+                    <img src="" alt="">
+                    <h3></h3>
+                    <p></p>
+                    <span class="price"></span>
+                        <button class="buy-button"></button>
+                    </div>
+                <div class="product">
+                    <p class="mark"></p>
+                    <img src="" alt="">
+                    <h3></h3>
+                    <p></p>
+                    <span class="price"></span>
+                        <button class="buy-button"></button>
+                    </div>
+                <div class="product">
+                    <p class="mark"></p>
+                    <img src="" alt="">
+                    <h3></h3>
+                    <p></p>
+                    <span class="price"></span>
+                    <button class="buy-button"></button>
+                </div>
+                <div class="product">
+                    <p class="mark"></p>
+                    <img src="" alt="">
+                    <h3></h3>
+                    <p></p>
+                    <span class="price"></span>
+                    <button class="buy-button"></button>
+                </div>
 
 
                 <!-- محصولات متفرقه -->  
@@ -342,6 +427,25 @@
     </main> 
 
     <footer>  
+        <span class="Symbols">Symbols:</span>
+
+        <article class="guarantees_items">
+        <div class="guarantees">
+            <img src="/public/images/Citywar-Back-Money-Guarantee.jpg" alt="">
+            <caption><strong><p>Back Money</p></strong></caption>
+        </div>
+
+        <div class="guarantees">
+            <img src="/public/images/Citywar-24_7-Support.jpg" alt="">
+            <caption><strong><p>24/7 Support</p></strong></caption>
+        </div>
+
+        <div class="guarantees">
+            <img src="/public/images/Citywar-Order-Guarantee.jpg" alt="">
+            <caption><strong><p>Delivery in the shortest time</p></strong></caption>
+        </div>
+    </article>
+
         <p>©2025 CityWar. All rights reserved.</p>  
     </footer>  
 
