login page: bugs fixed real estate page: floating action button options added

--- a/views/Real-Estate.html
+++ b/views/Real-Estate.html
@@ -22,16 +22,16 @@
         <div class=".sidebar-nav">
             <ul class="fab-menu" aria-hidden="true" id="fab-menu">
                 <li>
-                    <button onclick="showsection('Main-Page')" class="fab-item active" aria-label="Main Page" title="Main Page">🏠</button>
+                    <button onclick="showsection('Main-Page')" class="fab-item active" title="Main Page">🏠</button>
                 </li>
                 <li>
-                    <button onclick="showsection('Upload-Property')" class="fab-item" aria-label="Upload The Property" title="Upload The Property"> 📤 </button>
+                    <button onclick="showsection('Upload-Property')" class="fab-item" title="Upload The Property"> 📤 </button>
                 </li>
                 <li>
-                    <button onclick="showsection('Reservation-List')" class="fab-item" aria-label="Reservation List" title="Reservation List">🧾</button>
+                    <button onclick="showsection('Reservation-List')" class="fab-item" title="Reservation List">🧾</button>
                 </li>
                 <li>
-                    <button onclick="showsection('Favorite-List')" class="fab-item" aria-label="Favorite List" title="Favorite List">❤️</button>
+                    <button onclick="showsection('Favorite-List')" class="fab-item" title="Favorite List">❤️</button>
                 </li>
             </ul>
         </div>
@@ -77,7 +77,7 @@
     
     
     <section class="container">
-        <div id="Upload-Property" class=" section">
+        <div id="Upload-Property" class="section">
 
             <form action="">
 
@@ -102,7 +102,7 @@
         <div id="Favorite-List" class="section">
             <h2> Real Estate </h2>
 
-
+            
 
         </div>
 
