--- a/views/login.html
+++ b/views/login.html
@@ -17,7 +17,7 @@
         <h1 style="text-align: center;">CityWar Login</h1>
     </header>
 
-    <form action="profile.html" method="post" style="max-width: 500px; margin: 20px auto; background: #fff; padding: 20px; border-radius: 8px; box-shadow: 0 0 10px rgba(0,0,0,0.1);">
+    <form action="./profile.html" method="post" style="max-width: 500px; margin: 20px auto; background: #fff; padding: 20px; border-radius: 8px; box-shadow: 0 0 10px rgba(0,0,0,0.1);">
 
         <div style="margin-bottom: 15px;">
             <label for="Email"><strong>Email:</strong></label>
