a minimum number of charge amount added on number input

--- a/views/wallet.html
+++ b/views/wallet.html
@@ -29,7 +29,7 @@
             <h2>Wallet Balance:  </h2> <span id="wallet-balance">0</span> 
             <hr>
             </article>
-            <input type="number" id="amount" placeholder="Charge Amount" />  
+            <input type="number" id="amount" placeholder="Charge Amount" min="100" title="min: 100" />  
             <button onclick="chargeWallet()">Wallet Charge</button>
             <div id="message"></div>  
         </section>  
