--- a/views/login.html
+++ b/views/login.html
@@ -246,12 +246,16 @@
     </div>
 
         <!-- تایید قوانین -->
-        <div class="law-accept" style="margin-bottom: 15px;">
-            <label for="laws-accepting" style="font-size: 14px;">
-                <input type="checkbox" id="laws-accepting" name="laws-accepting" required>
+        <!-- <div class="law-accept" style="margin-bottom: 15px;"> -->
+            <label class="law-accepting" for="laws-accepting" style="font-size: 14px;">
+                
+                <input class="check" type="checkbox" id="laws-accepting" name="laws-accepting" required />
+                <!-- <div class="check"></div> -->
+                <span>
                 تمام <a href="./laws.html" target="_blank" class="link" style="font-size: x-large;">قوانین</a> را خوانده و تایید میکنم.
+            </span>
             </label>
-        </div>
+        <!-- </div> -->
 
         <button type="submit">Login</button>
 
