pages responsived for 320px mobiles to 4K devices

--- a/views/index.html
+++ b/views/index.html
@@ -3,17 +3,17 @@
 <head>  
     <meta charset="UTF-8">  
     <meta name="viewport" content="width=device-width, initial-scale=1.0">  
-    <link rel="stylesheet" href="/public/css/styles.css">  
+     
 
     <link rel="shortcut icon" href="/public/images/citywar-icon.jpg" type="image/x-icon">
-
+        <link rel="stylesheet" href="/public/css/styles.css"> 
     <title>CityWar</title>  
 </head>  
 <body>  
     <header>  
         <div class="header_main">
                 <div class="header">
-        <h1>CityWar</h1>
+        <span>CityWar</span>
         </div>
                 <div class="header">
           <!-- <a href="./signup.html">signup</a>   -->
@@ -40,8 +40,8 @@
     </section>
 
 
-    <div style="margin-top: 3em; margin-bottom: 1em; text-align: center;">
-       <strong> <span style="color: #111; margin-top: 10em; margin-bottom: 10em; font-size: x-large;"> Articles </span> </strong>
+    <div style="margin-top: 3em; margin-bottom: 1em; text-align: center;" class="title">
+       <strong> <span style="color: #111; margin-top: 10em; margin-bottom: 10em;"> Articles </span> </strong>
     </div>
     <hr>
     <div id="title_label">
