--- a/public/css/Office.css
+++ b/public/css/Office.css
@@ -1,3 +1,7 @@
+html{
+  font-size: 100%;
+}
+
 body {  
     font-family: tahoma, sans-serif;
     margin: 0;  
@@ -8,7 +12,7 @@ body {
 header {  
     color: white;  
     background: linear-gradient(to right, #1c1c1c, #444);  
-    padding: 20px;
+    padding: .5rem;
     position: sticky;
     width: 100%;  
     z-index: 2;
@@ -19,16 +23,20 @@ header {
 header h1 {  
     margin: 0; 
     display: flex;  
-    gap: px; /* فاصله بین لینک‌ها */ 
+    /* gap: .2rem; فاصله بین لینک‌ها  */
 }  
 
 .header_main{
   text-align: end;
   display: flex;
-  margin-right: 1em;
   margin-bottom: 0;
   justify-content: space-between;
     align-items: center;
+    flex-wrap: wrap;
+}
+
+.header{
+    flex-wrap: wrap;
 }
 
 .header a{
@@ -46,21 +54,21 @@ header h1 {
 header a{
   color: white;  
     text-decoration: none;  /* حذف زیرخط لینک */
-    margin: 0 10px;  
+    margin: 0 .6rem;  
     transition: color 0.5s;  /* انیمیشن رنگ */
-    font-size: 15px;
+    font-size: .9rem;
 }
 
 nav{
-    margin: 10px 0;  
+    margin: .6rem 0;  
     display: flex;  
-    gap: 2px; /* فاصله بین لینک‌ها */
+    gap: .8rem; /* فاصله بین لینک‌ها */
 }
 
 nav a {  
     color: white;  
     text-decoration: none;  /* حذف زیرخط لینک */
-    margin: 0 10px;  
+    margin: 0 .6rem;  
     transition: color 0.5s;  /* انیمیشن رنگ */  
 }
 
@@ -70,27 +78,44 @@ nav a:hover {
 
 footer{
     text-align: center;  
-    padding: 10px;  
+    padding: .6rem;  
     background-color: #404040;  
     color: white;  
 }
 
+/* search{
+      display: flex;
+    gap: 0;
+    margin: 0;
+    justify-content: center;
+    flex-direction: row;
+    align-items: center;
+} */
+
+.search-box label{
+    padding: 0;
+    font-size: 0;
+  }
+
+  .search-box label input{
+    padding: .2rem .4rem;
+  }
 
 .search-box{
     text-align: center;
     /* padding-top: 10em; */
     /* margin-bottom: 3em; */
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 input#search{
-    font-size: large;
-    border-radius: 5px;
-    width: 60%;
-    background-origin: unset;
+    border-radius: 7px;
 }
 
 .search-box form button{
-    border-radius: 5px;
+    border-radius: 7px;
     font-size: 1em;
     background-color: #30d773;
 }
@@ -117,12 +142,12 @@ a{
   border-radius: 7px;
   text-decoration: none !important;
   padding-bottom: 0.2em;
-  max-width: 320px;
+  max-width: 20rem;
 }
 
 .items:hover{
   transform: translateY(-5px);
-  transition-duration: 0.4s;
+  transition-duration: 0.5s;
 }
 
 figure{
@@ -130,6 +155,7 @@ figure{
   margin: 0;
 }
 
+/* sections img */
 .items_img{
   min-width: 10em;
   max-width: 20em;
@@ -138,8 +164,9 @@ figure{
   border-radius: 5px;
 }
 
+/* title of sections */
 .items_title_EN{
-  font-size: x-large;
+  font-size: 1rem;
   font-family: tahoma, sans-serif;
   margin: 1em;
   margin-top: 0;
@@ -147,9 +174,90 @@ figure{
   color: black;
 }
 
+/* section captions */
 .items_caption_EN{
-  font-size: 15px;
+  font-size: 1rem;
   margin-bottom: 1em;
   color: #1c1c1c;
 }
 
+
+/* Risponsive */
+
+@media(min-width:2500px){
+  header{
+    font-size: 4rem;
+  }
+
+  /* .header a{
+    font-size: 2rem;
+    padding: .7rem 1.5rem;
+    border-radius: 7px;
+    font-weight: 500;
+  } */
+  
+  /* nav a{
+    font-size: 2.1rem;
+  } */
+
+  h1{
+    font-size: 2.8rem;
+  }
+}
+
+@media (min-width: 1440px){
+  .header_main{
+    font-size: 2.2rem;
+  }
+
+  .header a{
+    font-size: 2rem;
+    padding: .7rem 1.5rem;
+    border-radius: 7px;
+    font-weight: 500;
+  }
+
+  .search-box{
+    align-items: center;
+    font-size: 2rem;
+    display: flex;
+  }
+
+  .search-box label{
+    padding: 0;
+    font-size: 0;
+  }
+
+  .search-box label input{
+    font-size: 2rem;
+    padding: .2rem 1rem;
+  }
+
+  nav a{
+    font-size: 2.1rem;
+  }
+
+  .items{
+    max-width: 60rem;
+    border-radius: 10px;
+  }
+  
+  .items_img{
+    min-width: 20em;
+    max-width: 59em;
+    min-height: 10em;
+    max-height: 59em;
+  }
+
+  .items_title_EN{
+    font-size: 4rem
+  }
+
+  .items_caption_EN{
+    font-size: 2rem;
+  }
+
+  footer{
+    font-size: 2rem;
+  }
+}
