--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,3 +1,7 @@
+html{
+  font-size: 100%;
+}
+
 body {  
     font-family: tahoma, sans-serif;
     margin: 0;  
@@ -8,13 +12,19 @@ body {
 header {  
     color: white;  
     background: linear-gradient(to right, #1c1c1c, #444);
-    padding: 20px;  
+    padding: 1rem;  
     position: sticky;
     width: 100%;  
     z-index: 2;
     top: 0;
     box-sizing: border-box;
+    font-size: 2rem;
 }  
+
+header .header_main span{
+    font-weight: bold;
+
+}
 
 header h1 {  
     margin: 0; 
@@ -24,7 +34,6 @@ header h1 {
 
 .header_main{
   text-align: end;
-  margin-right: 1em;
   margin-bottom: 0;
   display: flex;
   align-items: center;
@@ -33,7 +42,7 @@ header h1 {
 
 .header a{
   background-color: #30d773;
-  padding: 4px;
+  padding: .25rem;
   border-radius: 5px;
 }
 
@@ -46,13 +55,12 @@ header h1 {
 header a{
   color: white;  
     text-decoration: none;  /* حذف زیرخط لینک */
-    margin: 0 10px;  
     transition: color 0.5s;  /* انیمیشن رنگ */
     font-size: 15px;
 }
 
 nav{
-    margin: 10px 0;  
+    margin: .6rem 0;  
     display: flex;  
     gap: 2px; /* فاصله بین لینک‌ها */
 }
@@ -68,9 +76,16 @@ nav a:hover {
     color: #ffa500; /* رنگ پررنگ هنگام هاور */  
 }  
 
+div.title strong span{
+    font-size: 1.5rem;
+
+  }
+
 main{
     padding: 20px;  
     text-align: left;
+    letter-spacing: .1rem;
+    font-size: .9rem;
 }
 
 footer{
@@ -84,15 +99,15 @@ footer{
 /* مقالات */
 
 .container {  
-    max-width: 1200px;  
+    /* max-width: 1200px;   */
     margin: auto;  
     box-sizing: border-box;
   }  
   
-  h1 {  
+   h1 {  
     text-align: center;  
     /* color: #333;   */
-  }  
+   }   
   
   .articles-row {  
     display: flex;  
@@ -107,11 +122,11 @@ footer{
     background: #fff;  
     border-radius: 8px;  
     box-shadow: 0 2px 8px rgb(0 0 0 / 0.1);  
-    width: 280px;  
+    width: 17.5rem;  
     display: flex;  
     flex-direction: column;  
     overflow: hidden;  
-    transition: transform 0.2s ease;  
+    transition: transform 0.5s ease;  
   }  
   
   .article-card:hover {  
@@ -227,3 +242,142 @@ figure{
   color: #1c1c1c;
 }
 
+
+@media (max-width: 768px){
+  header .header_main span{
+    font-size: 1.8rem;
+  }
+
+  .header a{
+    font-size: .5rem;
+  }
+
+  main{
+    font-size: .6rem;
+  }
+}
+
+
+@media (min-width: 1440px), (min-height: 886px){
+  body{
+    font-family: tahoma, sans-serif;
+  }
+
+  header{
+    font-size: 3rem;
+  }
+
+  .header{
+    align-items: center;
+        display: contents;
+  }
+
+  .header a{
+    font-size: 1.5rem;
+    padding: .7rem 1.5rem;
+    border-radius: 7px;
+    font-weight: 500;
+  }
+
+  nav a{
+    font-size: 1.5rem;
+  }
+
+  section #containers1 h1{
+    /* font-size: 3rem; */
+    text-align: center;
+  }
+
+  h1{
+    font-size: 2rem;
+  }
+
+  .article-card{
+    font-size: 1.5rem;
+    width: 20rem;
+    height: 25rem;
+  }
+
+  .article-image{
+    width: 100%;
+    height: 50%;
+  }
+
+  .article-title{
+    font-size: 1.5rem;
+  }
+
+  .article-excerpt{
+    font-size: 1.1rem;
+  }
+
+  div.title strong span{
+    font-size: 2rem;
+
+  }
+
+  main{
+    font-size: 1.2rem;
+    letter-spacing: .1rem;
+  }
+
+  footer{
+    font-size: 1.5rem;
+    letter-spacing: .1rem;
+  }
+}
+
+@media(min-width:2500px), (min-height: 1551px){
+  header{
+    font-size: 4rem;
+  }
+
+  .header a{
+    font-size: 2rem;
+    padding: .7rem 1.5rem;
+    border-radius: 7px;
+    font-weight: 500;
+  }
+  
+  nav a{
+    font-size: 2.1rem;
+  }
+
+  h1{
+    font-size: 2.8rem;
+  }
+
+  .article-card{
+    font-size: 3rem;
+        width: 50rem;
+        height: 50rem;
+  }
+
+  .article-image{
+        width: 100%;
+    height: 60%;
+  }
+
+  .article-title{
+    font-size: 3rem;
+  }
+
+  .article-excerpt{
+    font-size: 2.2rem;
+  }
+
+  div.title strong span{
+    font-size: 2.8rem;
+
+  }
+
+  main{
+    font-size: 2rem;
+    letter-spacing: .2rem;
+  }
+
+  footer{
+    font-size: 3rem;
+    letter-spacing: .2rem;
+  }
+}
