--- a/views/wallet.html
+++ b/views/wallet.html
@@ -31,6 +31,7 @@
             </article>
             <input type="number" id="amount" placeholder="Charge Amount" min="100" title="min: 100" />  
             <button onclick="chargeWallet()">Wallet Charge</button>
+            <div class="attention" style="font-size: large; color: rgb(250, 90, 90);">attention: 1000CYT is 1Dollar</div>
             <div id="message"></div>  
         </section>  
         <section id="transaction-history">  
