--- a/public/css/School.css
+++ b/public/css/School.css
@@ -1,3 +1,7 @@
+html{
+  font-size: 100%;
+}
+
 body {  
     font-family: tahoma, sans-serif;
     margin: 0;  
@@ -7,12 +11,19 @@ body {
 
 header {  
     color: white;  
-    background: linear-gradient(to right, #1c1c1c, #444);   
-    padding: 20px;
-    text-align: center;  
-    position: fixed;
+    background: linear-gradient(to right, #1c1c1c, #444);
+    padding: 1rem;  
+    position: sticky;
     width: 100%;  
+    z-index: 2;
+    top: 0;
+    box-sizing: border-box;
+    font-size: 1rem;
 }  
+
+header .header_main span{
+    font-weight: bold;
+}
 
 header h1 {  
     margin: 0; 
@@ -23,7 +34,6 @@ header h1 {
 .header_main{
   text-align: end;
   display: flex;
-  margin-right: 1em;
   margin-bottom: 0;
   justify-content: space-between;
     align-items: center;
@@ -31,8 +41,9 @@ header h1 {
 
 .header a{
   background-color: #30d773;
-  padding: 4px;
+  padding: .25rem;
   border-radius: 5px;
+  font-size: .9rem;
 }
 
 .header a:hover{
@@ -44,13 +55,12 @@ header h1 {
 header a{
   color: white;  
     text-decoration: none;  /* حذف زیرخط لینک */
-    margin: 0 10px;  
     transition: color 0.5s;  /* انیمیشن رنگ */
-    font-size: 15px;
+    font-size: .9rem;
 }
 
 nav{
-    margin: 10px 0;  
+    margin: .6rem 0;  
     display: flex;  
     gap: 2px; /* فاصله بین لینک‌ها */
 }
@@ -68,11 +78,9 @@ nav a:hover {
 
 footer{
     text-align: center;  
-    margin-top: 10em;
     padding: 10px;  
     background-color: #404040;  
     color: white;  
-    top: 90%;
 }
 
 
@@ -108,10 +116,9 @@ a{
   margin-top: auto;
   justify-content: center;
   padding: 0;
-  padding-top: 10em;
+  padding-top: 1em;
+  margin-bottom: 1em;
   gap: 1em;
-  margin-left: 1em;
-  margin-right: 1em;
 }
 
 .items{
@@ -155,3 +162,151 @@ figure{
   color: #1c1c1c;
 }
 
+
+
+@media (max-width: 768px){
+  header{
+    font-size: .7rem;
+  }
+
+  .header a{
+    font-size: .6rem;
+  }
+
+  main{
+    font-size: .6rem;
+  }
+
+  input#search {
+  font-size: .5rem;
+  }
+
+  .search-box form button {
+    font-size: .5rem;
+  }
+}
+
+
+@media (min-width: 1440px), (min-height: 886px){
+  body{
+    font-family: tahoma, sans-serif;
+  }
+
+  header{
+    font-size: 3rem;
+  }
+
+  .header{
+    align-items: center;
+        display: contents;
+  }
+
+  .header a{
+    font-size: 1.5rem;
+    padding: .7rem 1.5rem;
+    border-radius: 7px;
+    font-weight: 500;
+  }
+
+  nav a{
+    font-size: 1.5rem;
+  }
+
+  section #containers1 h1{
+    /* font-size: 3rem; */
+    text-align: center;
+  }
+
+  h1{
+    font-size: 2rem;
+  }
+
+  .article-card{
+    font-size: 1.5rem;
+    width: 20rem;
+    height: 25rem;
+  }
+
+  .article-image{
+    width: 100%;
+    height: 50%;
+  }
+
+  .article-title{
+    font-size: 1.5rem;
+  }
+
+  .article-excerpt{
+    font-size: 1.1rem;
+  }
+
+  div.title strong span{
+    font-size: 2rem;
+
+  }
+
+  main{
+    font-size: 1.2rem;
+    letter-spacing: .1rem;
+  }
+
+  footer{
+    font-size: 1.5rem;
+    letter-spacing: .1rem;
+  }
+}
+
+@media(min-width:2500px), (min-height: 1551px){
+  header{
+    font-size: 4rem;
+  }
+
+  .header a{
+    font-size: 2rem;
+    padding: .7rem 1.5rem;
+    border-radius: 7px;
+    font-weight: 500;
+  }
+  
+  nav a{
+    font-size: 2.1rem;
+  }
+
+  h1{
+    font-size: 2.8rem;
+  }
+
+  .article-card{
+    font-size: 3rem;
+        width: 50rem;
+        height: 50rem;
+  }
+
+  .article-image{
+        width: 100%;
+    height: 60%;
+  }
+
+  .article-title{
+    font-size: 3rem;
+  }
+
+  .article-excerpt{
+    font-size: 2.2rem;
+  }
+
+  div.title strong span{
+    font-size: 2.8rem;
+
+  }
+
+  main{
+    font-size: 2rem;
+    letter-spacing: .2rem;
+  }
+
+  footer{
+    font-size: 3rem;
+    letter-spacing: .2rem;
+  }
+}
